--- a/templates/perugourmet/dessert.html
+++ b/templates/perugourmet/dessert.html
@@ -91,7 +91,7 @@
         <div class="col1">
             
 
-            <div class="card1" style="width: 25rem;">
+            <div class="card1" >
                 <img src="/static/perugourmet/img/fotos/arroz con leche.png"  class="card-img-top"alt="">
                 <div class="card-body">
                     <h1 class="titulo">Arroz con Leche</h1> 
@@ -124,7 +124,7 @@
         <!--  Tarjeta 2 -->
         <div class="col1">
 
-                <div class="card1" style="width: 25rem;" >
+                <div class="card1">
                     <img src="/static/perugourmet/img/fotos/crema de lucuma helado.png"  class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Crema de Lucuma</h1> 
@@ -159,7 +159,7 @@
         <!--  Tarjeta 3 -->
         <div class="col1">    
 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/fotos/mazamorra.png"  class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Mazamorra Morada</h1> 
@@ -195,7 +195,7 @@
         <!--  Tarjeta 4 -->
         <div class="col1">    
 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/fotos/suspirodelimeña.png"  class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Suspiro Limeño</h1> 
@@ -227,7 +227,7 @@
         <!--  Tarjeta 4 -->
         <div class="col1"> 
                 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/fotos/turron.png" class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Turron</h1> 
@@ -259,7 +259,7 @@
          <!--  Tarjeta 5 -->
          <div class="col1"> 
 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/fotos/picarones.png" class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Picarones</h1> 
@@ -289,7 +289,7 @@
 
         <!--  Tarjeta 4 -->
         <div class="col1"> 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/fotos/alfajores.png" class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Alfajores</h1> 
