--- a/templates/perugourmet/food.html
+++ b/templates/perugourmet/food.html
@@ -108,7 +108,7 @@
         <div class="col1">
             
 
-            <div class="card1" style="width: 25rem;">
+            <div class="card1">
                 <img src="/static/perugourmet/img/foodfotos/ajidegallina.png"  class="card-img-top"alt="">
                 <div class="card-body">
                     <h1 class="titulo">Aji de Gallina</h1> 
@@ -142,7 +142,7 @@
         <!--  Tarjeta 2 -->
         <div class="col1">
 
-                <div class="card1" style="width: 25rem;" >
+                <div class="card1">
                     <img src="/static/perugourmet/img/foodfotos/anticuchodecorazon.png"  class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Anticuchos</h1> 
@@ -184,7 +184,7 @@
         <!--  Tarjeta 3 -->
         <div class="col1">    
 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/foodfotos/arrozconpato.png"  class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Arroz con Pollo</h1> 
@@ -224,7 +224,7 @@
         <!--  Tarjeta 4 -->
         <div class="col1"> 
                 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/foodfotos/causarellena.png" class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Causa Rellena </h1> 
@@ -262,7 +262,7 @@
          <!--  Tarjeta 5 -->
          <div class="col1"> 
 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/foodfotos/ceviche.png" class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Ceviche</h1> 
@@ -300,7 +300,7 @@
 
         <!--  Tarjeta 4 -->
         <div class="col1"> 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/foodfotos/lomosaltado.png" class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Lomo saltado</h1> 
@@ -338,7 +338,7 @@
         
         <!--  Tarjeta 5 -->
         <div class="col1"> 
-            <div class="card1" style="width: 25rem;">
+            <div class="card1">
                 <img src="/static/perugourmet/img/foodfotOS/polloalabraza.png" class="card-img-top"alt="">
                 <div class="card-body">
                     <h1 class="titulo">Pollo a la brasa</h1> 
@@ -380,7 +380,7 @@
     
         <!--  Tarjeta 6 -->
         <div class="col1"> 
-            <div class="card1" style="width: 25rem;">
+            <div class="card1">
                 <img src="/static/perugourmet/img/foodfotos/rocotorelleno.png" class="card-img-top"alt="">
                 <div class="card-body">
                     <h1 class="titulo">Rocoto relleno</h1> 
