--- a/templates/perugourmet/starter.html
+++ b/templates/perugourmet/starter.html
@@ -70,7 +70,7 @@
         
         <!-- Tarjeta Arroz con Leche -->
         <div class="col1">
-            <div class="card1" style="width: 25rem;">
+            <div class="card1">
                 <img src="{{ url_for('static', filename='perugourmet/img/fotos/arroz con leche.png') }}" class="card-img-top" alt="">
                 <div class="card-body">
                     <h1 class="titulo">Arroz con Leche</h1> 
@@ -91,7 +91,7 @@
 
         <!-- Tarjeta Crema de Lucuma -->
         <div class="col1">
-            <div class="card1" style="width: 25rem;">
+            <div class="card1" >
                 <img src="{{ url_for('static', filename='perugourmet/img/fotos/crema de lucuma helado.png') }}" class="card-img-top" alt="">
                 <div class="card-body">
                     <h1 class="titulo">Crema de Lucuma</h1>
@@ -111,7 +111,7 @@
 
         <!-- Tarjeta Mazamorra Morada -->
         <div class="col1">
-            <div class="card1" style="width: 25rem;">
+            <div class="card1">
                 <img src="{{ url_for('static', filename='perugourmet/img/fotos/mazamorra.png') }}" class="card-img-top" alt="">
                 <div class="card-body">
                     <h1 class="titulo">Mazamorra Morada</h1>
@@ -131,7 +131,7 @@
 
         <!-- Tarjeta Suspiro Limeño -->
         <div class="col1">
-            <div class="card1" style="width: 25rem;">
+            <div class="card1" >
                 <img src="{{ url_for('static', filename='perugourmet/img/fotos/suspirodelimeña.png') }}" class="card-img-top" alt="">
                 <div class="card-body">
                     <h1 class="titulo">Suspiro Limeño</h1>
@@ -151,7 +151,7 @@
 
         <!-- Tarjeta Turron -->
         <div class="col1">
-            <div class="card1" style="width: 25rem;">
+            <div class="card1">
                 <img src="{{ url_for('static', filename='perugourmet/img/fotos/turron.png') }}" class="card-img-top" alt="">
                 <div class="card-body">
                     <h1 class="titulo">Turron</h1>
@@ -171,7 +171,7 @@
 
         <!-- Tarjeta Picarones -->
         <div class="col1">
-            <div class="card1" style="width: 25rem;">
+            <div class="card1">
                 <img src="{{ url_for('static', filename='perugourmet/img/fotos/picarones.png') }}" class="card-img-top" alt="">
                 <div class="card-body">
                     <h1 class="titulo">Picarones</h1>
@@ -191,7 +191,7 @@
 
         <!-- Tarjeta Alfajores -->
         <div class="col1">
-            <div class="card1" style="width: 25rem;">
+            <div class="card1">
                 <img src="{{ url_for('static', filename='perugourmet/img/fotos/alfajores.png') }}" class="card-img-top" alt="">
                 <div class="card-body">
                     <h1 class="titulo">Alfajores</h1>
