--- a/templates/routespecific/routesspecificcusconationalpark1.html
+++ b/templates/routespecific/routesspecificcusconationalpark1.html
@@ -10,16 +10,19 @@
   
   
     <h1>Itinerary Cusco</h1>
-    <h2 class="introduction">MANU NATIONAL PARK CULTURAL ZONE PROGRAM 4 DAYS AND 3 NIGHTS</h2>
+
+    <div>
+      <h2 class="introduction">MANU NATIONAL PARK CULTURAL ZONE PROGRAM 4 DAYS AND 3 NIGHTS</h2>
+    </div>
+
     <div class="introduction">
       <h2> TimeLine </h2>
     </div> 
+
     <div class="introduction">
       <p>In TourPeruTravellers, we offer you this magnificent inka route where u enjoy mountains, archaeological sites</p>
-
     </div>
 
-    </div>
     
     <div class="timeline">
       <ul>
