--- a/templates/routespecific/routesspecifictacna.html
+++ b/templates/routespecific/routesspecifictacna.html
@@ -10,16 +10,21 @@
   
   
     <h1>Tour Tacna </h1>
-    <div class="introduction">
+
+    <div>
+      <div class="introduction">
+    </div>
+
+    <div>
       <h2> TimeLine </h2>
-    </div> 
+    </div>
+      
+  
     <div class="introduction">
       <p>In TourPeruTravellers, we offer you this magnificent inka route where u enjoy mountains, archaeological sites</p>
-
     </div>
 
-    </div>
-    
+       
     <div class="timeline">
       <ul>
 
