--- a/templates/tourperu/cusco.html
+++ b/templates/tourperu/cusco.html
@@ -59,7 +59,7 @@
 
 
         <p class="para1">
-            All the activities you can do on your trip to the Ayacucho City!
+            All the activities you can do on your trip to the Cusco City!
 
             <ul class="para1">Visit Qorikancha (Temple of the Sun) – Once the most important temple in the Inca Empire, Qorikancha was dedicated to the Sun God, Inti. Explore the impressive architecture and learn about its significance in Inca religion and history.</ul>
             <ul class="para1">Discover Sacsayhuamán – A short distance from the city center, this archaeological site features massive stone walls built by the Incas. Enjoy stunning views of Cusco and explore the surrounding area, which is great for hiking.</ul>
