--- a/templates/tourperu/ica.html
+++ b/templates/tourperu/ica.html
@@ -18,7 +18,7 @@
 
 <div class="container-intro">
     <div class="text">
-        <h1 class="title"> ESSENCE OF PERU  inka route</h1>
+        <h1 class="title"> Ica Inka Route</h1>
 
         
         <!-- VIDEO DE CUSCO-->
