--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/contact.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='contact.css') }}">
     <title>Formulario de Contacto</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <legend>Form Information</legend>
                 
                 <div class="campo">
-                    <label for="name">First Name</label>
+                    <label for="name">First Name:</label>
                     <input type="text" id="name" name="name" placeholder="First name..." required />
                 </div>
                 
