--- a/templates/perugourmet/drinking.html
+++ b/templates/perugourmet/drinking.html
@@ -11,48 +11,45 @@
 </head>
 <body>
 
-    <!-- Slider de postres head-->
-
-    <div id="carouselExampleFade" class="carousel slide carousel-fade">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="/static/perugourmet/img/fotosdrinkings/aguaymantojuice.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/static/perugourmet/img/fotosdrinkings/airampo.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/static/perugourmet/img/fotosdrinkings/chichadejora.png" class="d-block w-100" alt="...">
-          </div>        
-          <div class="carousel-item">
-            <img src="/static/perugourmet/img/fotosdrinkings/chichamorada.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/static/perugourmet/img/fotosdrinkings/cuzqueñacerveza.png" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="/static/perugourmet/img/fotosdrinkings/emoliente.png" class="d-block w-100" alt="...">
-          </div>
+  <!-- Slider de postres -->
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="/static/perugourmet/img/fotosdrinkings/aguaymantojuice.png" class="d-block w-100" alt="Aguaymanto Juice">
         </div>
         <div class="carousel-item">
-            <img src="/static/perugourmet/img/fotosdrinkings/inkakola.png" class="d-block w-100" alt="...">
-          </div>
+            <img src="/static/perugourmet/img/fotosdrinkings/airampo.png" class="d-block w-100" alt="Airampo">
         </div>
         <div class="carousel-item">
-            <img src="/static/perugourmet/img/fotosdrinkings/matedecoca.png" class="d-block w-100" alt="...">
-          </div>
+            <img src="/static/perugourmet/img/fotosdrinkings/chichadejora.png" class="d-block w-100" alt="Chicha de Jora">
+        </div>
+        <div class="carousel-item">
+            <img src="/static/perugourmet/img/fotosdrinkings/chichamorada.png" class="d-block w-100" alt="Chicha Morada">
+        </div>
+        <div class="carousel-item">
+            <img src="/static/perugourmet/img/fotosdrinkings/cuzqueñacerveza.png" class="d-block w-100" alt="Cuzqueña Cerveza">
+        </div>
+        <div class="carousel-item">
+            <img src="/static/perugourmet/img/fotosdrinkings/emoliente.png" class="d-block w-100" alt="Emoliente">
+        </div>
+        <div class="carousel-item">
+            <img src="/static/perugourmet/img/fotosdrinkings/inkakola.png" class="d-block w-100" alt="Inka Kola">
+        </div>
+        <div class="carousel-item">
+            <img src="/static/perugourmet/img/fotosdrinkings/matedecoca.png" class="d-block w-100" alt="Mate de Coca">
+        </div>
     </div>
 
-
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+    <!-- Controles de navegación -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
 
 
 
@@ -92,7 +89,7 @@
         <div class="col1">
             
 
-            <div class="card1" style="width: 25rem;">
+            <div class="card1">
                 <img src="/static/perugourmet/img/fotosdrinkings/aguaymantojuice.png"  class="card-img-top"alt="">
                 <div class="card-body">
                     <h1 class="titulo">Aguaymanto juice</h1> 
@@ -131,7 +128,7 @@
         <!--  Tarjeta 2 -->
         <div class="col1">
 
-                <div class="card1" style="width: 25rem;" >
+                <div class="card1">
                     <img src="/static/perugourmet/img/fotosdrinkings/airampo.png"  class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Airampo</h1> 
@@ -174,7 +171,7 @@
         <!--  Tarjeta 3 -->
         <div class="col1">    
 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/fotosdrinkings/chichadejora.png"  class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Chicha de Jora </h1> 
@@ -218,7 +215,7 @@
         <!--  Tarjeta 4 -->
         <div class="col1">    
 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/fotosdrinkings/cuzqueñacerveza.png"  class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Cerveza Cuzqueña</h1> 
@@ -258,7 +255,7 @@
         <!--  Tarjeta 4 -->
         <div class="col1"> 
                 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/fotosdrinkings/emoliente.png" class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Emoliente</h1> 
@@ -301,7 +298,7 @@
          <!--  Tarjeta 5 -->
          <div class="col1"> 
 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/fotosdrinkings/inkakola.png" class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Inka Kola</h1> 
@@ -346,7 +343,7 @@
 
         <!--  Tarjeta 4 -->
         <div class="col1"> 
-                <div class="card1" style="width: 25rem;">
+                <div class="card1">
                     <img src="/static/perugourmet/img/fotosdrinkings/matedecoca.png" class="card-img-top"alt="">
                     <div class="card-body">
                         <h1 class="titulo">Mate de coca</h1> 
@@ -389,7 +386,7 @@
         
         <!--  Tarjeta 5 -->
         <div class="col1"> 
-            <div class="card1" style="width: 25rem;">
+            <div class="card1">
                 <img src="/static/perugourmet/img/fotosdrinkings/piscosour.png" class="card-img-top"alt="">
                 <div class="card-body">
                     <h1 class="titulo">Pisco Sour</h1> 
