--- a/templates/routespecific/routesspecificarequipa1.html
+++ b/templates/routespecific/routesspecificarequipa1.html
@@ -10,17 +10,20 @@
 
   
   
-    <h1>Itinerary Arequipa</h1>
-    <h2 class="introduction">COLCA VALLEY 2 DAYS AND 1 NIGHT</h2>
-    <div class="introduction">
-      <h2> TimeLine </h2>
-    </div> 
-    <div class="introduction">
-      <p>In TourPeruTravellers, we offer you this magnificent inka route where you enjoy mountains, archaeological sites and more.</p>
+<h1>Itinerary Arequipa</h1>
 
-    </div>
+<div class="introduction">
+  <h2>COLCA VALLEY 2 DAYS AND 1 NIGHT</h2>
+</div>
 
-    </div>
+<div class="introduction">
+  <h2>TimeLine</h2>
+</div>
+
+<div class="introduction">
+  <p>In TourPeruTravellers, we offer you this magnificent Inka route where you enjoy mountains, archaeological sites, and more.</p>
+</div>
+
     
     <div class="timeline">
       <ul>
