--- a/templates/routespecific/routesspecificayacucho1.html
+++ b/templates/routespecific/routesspecificayacucho1.html
@@ -11,16 +11,22 @@
   
   
     <h1>Itinerary Ayacucho</h1>
-    <h2 class="introduction">TRADITIONAL AYACUCHO 3 DAYS 2 NIGHTS</h2>
+
+    <div>
+      <h2 class="introduction">TRADITIONAL AYACUCHO 3 DAYS 2 NIGHTS</h2>
+    </div>
+   
+    
+    <div class="introduction">
+      <p>In TourPeruTravellers, we offer you this magnificent inka route where you enjoy mountains, archaeological sites and more.</p>
+    </div>
+    
     <div class="introduction">
       <h2> TimeLine </h2>
     </div> 
-    <div class="introduction">
-      <p>In TourPeruTravellers, we offer you this magnificent inka route where you enjoy mountains, archaeological sites and more.</p>
+    
 
-    </div>
-
-    </div>
+    
     
     <div class="timeline">
       <ul>
