--- a/templates/routespecific/routesspecificchiclayo1.html
+++ b/templates/routespecific/routesspecificchiclayo1.html
@@ -11,15 +11,17 @@
   
   
     <h1>Itinerary Chiclayo</h1>
-    <h2 class="introduction">CHICLAYO 04 DAYS 03 NIGHTS</h2>
-    <div class="introduction">
-      <h2> TimeLine </h2>
-    </div> 
-    <div class="introduction">
-      <p>In TourPeruTravellers, we offer you this magnificent inka route where you enjoy mountains, archaeological sites and more.</p>
 
+    <div class="introduction">
+      <h2>CHICLAYO 04 DAYS 03 NIGHTS</h2>
+    </div> 
+
+    <div class="introduction">
+      <h2>TimeLine</h2>
     </div>
 
+    <div class="introduction">
+      <p>In TourPeruTravellers, we offer you this magnificent inka route where you enjoy mountains, archaeological sites and more.</p>
     </div>
     
     <div class="timeline">
