--- a/templates/routespecific/routesspecificesenceperu.html
+++ b/templates/routespecific/routesspecificesenceperu.html
@@ -10,16 +10,20 @@
   
   
     <h1>Itinerary ESENCE OF PERU</h1>
-    <h2 class="introduction">ESSENCE OF PERU IN 8 DAYS</h2>
+
+    <div>
+      <h2 class="introduction">ESSENCE OF PERU IN 8 DAYS</h2>
+    </div>
+   
     <div class="introduction">
       <h2> TimeLine </h2>
     </div> 
+
     <div class="introduction">
       <p>In TourPeruTravellers, we offer you this magnificent inka route where u enjoy mountains, archaeological sites</p>
-
     </div>
 
-    </div>
+    
     
     <div class="timeline">
       <ul>
