--- a/templates/routespecific/routesspecificincajungle2.html
+++ b/templates/routespecific/routesspecificincajungle2.html
@@ -11,16 +11,20 @@
   
   
     <h1>Itinerary Cusco</h1>
-    <h2 class="introduction">INKA JUNGLE 4 DAYS AND 3 NIGHTS</h2>
+
+    <div>
+      <h2 class="introduction">INKA JUNGLE 4 DAYS AND 3 NIGHTS</h2>
+    </div>
+
     <div class="introduction">
       <h2> TimeLine </h2>
     </div> 
+
     <div class="introduction">
       <p>In TourPeruTravellers, we offer you this magnificent inka route where you enjoy mountains, archaeological sites and more.</p>
-
     </div>
 
-    </div>
+    
     
     <div class="timeline">
       <ul>
