--- a/templates/routespecific/routesspecificlaresmapi.html
+++ b/templates/routespecific/routesspecificlaresmapi.html
@@ -10,20 +10,20 @@
   
   
     <h1>Itinerary Cusco Lares - MAPI</h1>
-    <h2 class="introduction"> 4 DAYS AND 3 NIGHTS</h2>
+
+    <div>
+      <h2 class="introduction"> 4 DAYS AND 3 NIGHTS</h2>
+    </div>
+    
     <div class="introduction">
       <h2> TimeLine </h2>
     </div> 
+
       <div class="introduction">
         <p>In TourPeruTravellers, we offer you this magnificent inka route where u enjoy mountains, archaeological sites</p>
       </div>
 
-      <div class="introduction">
-        <p></p>
-    
-      </div>
-
-    </div>
+  
     
     <div class="timeline">
       <ul>
