--- a/templates/routespecific/routesspecificlima1.html
+++ b/templates/routespecific/routesspecificlima1.html
@@ -11,17 +11,19 @@
   
   
     <h1>Itinerary Lima</h1>
-    <h2 class="introduction">SERVICES IN LIMA</h2>
+
+    <div>
+      <h2 class="introduction">SERVICES IN LIMA</h2>
+    </div>
+
     <div class="introduction">
       <h2> TimeLine </h2>
     </div> 
+
     <div class="introduction">
       <p>In TourPeruTravellers, we offer you this magnificent inka route where you enjoy mountains, archaeological sites and more.</p>
-
     </div>
-
-    </div>
-    
+  
     <div class="timeline">
       <ul>
 
