--- a/templates/routespecific/routesspecificpuno1.html
+++ b/templates/routespecific/routesspecificpuno1.html
@@ -9,18 +9,21 @@
 
 
   
-  
     <h1>Itinerary Puno</h1>
-    <h2 class="introduction">TITICACA LAKE 2 DAYS AND 1 NIGHT</h2>
+
+    <div>
+      <h2 class="introduction">TITICACA LAKE 2 DAYS AND 1 NIGHT</h2>
+    </div>
+    
+
     <div class="introduction">
       <h2> TimeLine </h2>
     </div> 
+
     <div class="introduction">
       <p>In TourPeruTravellers, we offer you this magnificent inka route where you enjoy mountains, archaeological sites and more.</p>
-
     </div>
 
-    </div>
     
     <div class="timeline">
       <ul>
