--- a/templates/routespecific/routesspecifictrujillo1.html
+++ b/templates/routespecific/routesspecifictrujillo1.html
@@ -11,17 +11,20 @@
   
   
     <h1>Itinerary Trujillo</h1>
-    <h2 class="introduction">COLONIAL ARCHAEOLOGICAL TRUJILLO 02 DAYS AND 01 NIGHT</h2>
+
+    <div>
+      <h2 class="introduction">COLONIAL ARCHAEOLOGICAL TRUJILLO 02 DAYS AND 01 NIGHT</h2>
+    </div>
+
     <div class="introduction">
       <h2> TimeLine </h2>
     </div> 
+
     <div class="introduction">
       <p>In TourPeruTravellers, we offer you this magnificent inka route where you enjoy mountains, archaeological sites and more.</p>
-
     </div>
 
-    </div>
-    
+       
     <div class="timeline">
       <ul>
 
